# optitrain

./: .gitignore  README.md  pyproject.toml
src/optitrain/: __init__.py  api.py  cli.py  prompts.py  resources.py  server.py  strategies.py  tools.py
tests/: test_api_transport_client.py
