[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optitrain"
version = "0.1.0"
description = "MCP server for Deutsche Bahn fare optimization (HAFAS transport API)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "mcp>=1.6.0",
]

[project.scripts]
optitrain = "optitrain:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
